--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "with-react-bootstrap",
-  "version": "0.1.0",
-  "author": "Wenzhi Li",
+  "name": "book-tid-client-ui",
+  "version": "1.0.0",
+  "author": "",
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p $PORT"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "bootstrap": "^4.4.1",
+    "dayjs": "^1.9.7",
+    "mongoose": "^5.9.13",
     "next": "latest",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1"
   }
 }
