--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bootstrap": "^4.4.1",
     "dayjs": "^1.9.7",
     "mongoose": "^5.9.13",
-    "next": "latest",
+    "next": "^10.0.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-datepicker": "^3.3.0",
