--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "author": "",
   "license": "MIT",
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,10 +13,10 @@
     "bootstrap": "^4.4.1",
     "dayjs": "^1.9.7",
     "express": "^4.17.1",
-    "heroku-ssl-redirect": "^0.1.1",
+    "express-enforces-ssl": "^1.1.0",
     "mongoose": "^5.9.13",
     "next": "^10.0.3",
-    "pm2": "^4.5.0",
+    "nodemon": "^2.0.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-datepicker": "^3.3.0",
