Added cancel page but upgraded title and favicon

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://math752h:fvt37tbp@booktid-db.ybzfy.azure.mongodb.net/BOOKTID-DB?retryWrites=true&w=majority
+TEST_MONGODB_URI=mongodb+srv://math752h:fvt37tbp@cluster0.bk8ks.mongodb.net/test-db?retryWrites=true&w=majority
