--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     ".next/cache"
   ],
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 5000",
     "build": "next build",
-    "start": "next start -p $PORT"
+    "start": "next start -p $PORT",
+    "analyze": "ANALYZE=true yarn build && cd .next/analyze && serve"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@next/bundle-analyzer": "^10.0.5",
     "axios": "^0.21.0",
     "bootstrap": "^4.4.1",
     "dayjs": "^1.9.7",
